fix: 모바일 환경 overflow hidden 무시되는 현상 해결

--- a/src/css/components/_back-logo.css
+++ b/src/css/components/_back-logo.css
@@ -77,3 +77,9 @@
     left: 0;
   }
 }
+
+@media (max-width: 1023px) {
+  .back-logo {
+    display: none;
+  }
+}
