--- a/src/css/main.css
+++ b/src/css/main.css
@@ -20,6 +20,7 @@ body {
 }
 
 body {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
